--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@vitest/ui": "^0.34.6",
+    "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-chessboard": "^4.2.3",
     "react-dom": "^18.2.0"
